--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-MONGO_ROOT_USER=root
-MONGO_ROOT_PASSWORD=drifterapps123
-MONGO_DATABASE_VOLUME=./data/mongo
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=drifterapps123
 MONGO_EXPRESS_USER=pmoreau
 MONGO_EXPRESS_PASSWORD=drifterapps123
+MONGO_REPLICA_SET_NAME=rs0
+DB_USER=holefeeder
+DB_PASSWORD=drifterapps123
