--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,59 @@
 version: '3.4'
 
 services:
+
+  mariadb:
+    container_name: mariadb
+    image: mariadb:10.5
+    restart: always
+    hostname: mariadb
+    environment:
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - 3306:3306
+    volumes:
+      - ./mysql-init-scripts:/docker-entrypoint-initdb.d
+      - mariadb-data:/var/lib/mysql
+
+  # mysql:
+  #   container_name: mysql
+  #   image: mysql
+  #   restart: always
+  #   environment:
+  #     MYSQL_USER: ${DB_USER}
+  #     MYSQL_PASSWORD: ${DB_PASSWORD}
+  #     MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+  #   ports:
+  #     - 3306:3306
+  #   volumes:
+  #     - ./mysql-init-scripts:/docker-entrypoint-initdb.d
+  #     - mysql-data:/var/lib/mysql
+
+  db:
+    container_name: postgresdb
+    image: postgres
+    restart: always
+    volumes:
+      - ./pg-init-scripts:/docker-entrypoint-initdb.d
+      - postgres-data:/var/lib/postgresql/data
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_MULTIPLE_DATABASES: holefeeder
+    ports:
+      - 5432:5432
+  
+  adminer:
+    container_name: adminer
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+      
   mongo-express:
     container_name: mongo-express
     image: mongo-express
@@ -11,8 +64,8 @@ services:
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_EXPRESS_USER}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_EXPRESS_PASSWORD}
       ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USER}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     depends_on:
       - mongo
     links:
@@ -22,31 +75,52 @@ services:
     container_name: mongo
     image: mongo
     restart: on-failure
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
-    ports:
-      - 27017:27017
+    hostname: mongo
     volumes:
-      - ./data/mongo/db:/data/db
-
+      - ./mongo/mongod.conf:/etc/mongod.conf
+      - ./mongo/keyfile:/etc/keyfile
+      - ./mongo/initdb.d/:/docker-entrypoint-initdb.d/
+      - mongo-data:/data/db/
+      - mongo-data:/var/log/mongodb/
+    env_file:
+      - .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_REPLICA_SET_NAME: ${MONGO_REPLICA_SET_NAME}
+    ports:
+        - "27017:27017"
+    healthcheck:
+        test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u $${MONGO_INITDB_ROOT_USERNAME} -p $${MONGO_INITDB_ROOT_PASSWORD} --quiet) -eq 1
+        interval: 10s
+        start_period: 30s
+    command: ["-f", "/etc/mongod.conf", "--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all"]
+  
   seq:
     container_name: seq
-    restart: unless-stopped
     image: datalust/seq:latest
+    restart: unless-stopped
+    hostname: seq
     ports:
     - 5341:80
     volumes:
-    - ./data/seq:/data
+    - seq-data:/data
     environment:
-    - DEFAULT_HOST=seq.drifterapps.com
-    - VIRTUAL_HOST=seq.drifterapps.com
-    - VIRTUAL_PORT=80
-    - LETSENCRYPT_HOST=seq.drifterapps.com
-    - LETSENCRYPT_EMAIL=info@drifterapps.com
     - ACCEPT_EULA=Y
   
 networks:
   default:
-    name: development-network
-    driver: bridge
+    external:
+      name: backend-network
+
+volumes:
+  mariadb-data:
+    external: true
+  mysql-data:
+    external: true
+  postgres-data:
+    external: true
+  mongo-data:
+    external: true
+  seq-data:
+    external: true
