fixes and mongo convert

--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 
 resources:
   - adminer-deployment.yaml
+  - seq-deployment.yaml
   - mysql-deployment.yaml
   - ingress-deployment.yaml
