--- a/kubernetes/persistant/mysql-secrets.yaml
+++ b/kubernetes/persistant/mysql-secrets.yaml
@@ -4,6 +4,8 @@ metadata:
   name: mysql-pass
 type: Opaque
 data:
-  password: xxx
-  api-user: xxx
-  api-password: xxx
+  password: ZEtRSFRZTjlnaGRlaVNQWTNNcjJ5dW9CUExheGVI
+  prd-api-user: aG9sZWZlZWRlci1wcmQtdXNlcg==
+  prd-api-password: V19MQEp1WEU3WFVmOXlzVVhURUxDOGZB
+  stg-api-user: aG9sZWZlZWRlci1zdGctdXNlcg==
+  stg-api-password: Z19QTUpFa204cjItZ0daM1ZxLk1OcEBl
