--- a/kubernetes/ingress-deployment.yaml
+++ b/kubernetes/ingress-deployment.yaml
@@ -21,3 +21,27 @@ spec:
                 name: adminer
                 port:
                   number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: seq-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prd
+spec:
+  tls:
+  - hosts:
+    - seq.drifterapps.app
+    secretName: seq-tls
+  rules:
+    - host: seq.drifterapps.app
+      http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: seq
+                port:
+                  number: 80
