--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -59,11 +59,11 @@ spec:
           name: mysql
         resources:
           requests:
-            memory: "128Mi"
-            cpu: "200m"
+            memory: 128Mi
+            cpu: 200m
           limits:
-            memory: "500Mi"
-            cpu: "500m"
+            memory: 500Mi
+            cpu: 500m
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
