--- a/kubernetes/cluster/kustomization.yaml
+++ b/kubernetes/cluster/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - stg-issuer.yaml
-  - prd-issuer.yaml
+- selfsigned-issuer.yaml
+- stg-issuer.yaml
+- prd-issuer.yaml
